--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -27,65 +27,68 @@
      "outputs": [],
      "input": [
       "franchiseslist = build_franchise_chart_urls()\n",
-      "movie_urls = build_movie_url_list(franchiseslist[:20])"
+      "franchise_urls = build_movie_url_list(franchiseslist[:1])\n"
      ],
      "language": "python",
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "aliens_trilogy = movie_urls['alien']\n",
-      "aliens_data = make_series_data(aliens_trilogy)\n",
-      "btf_trilogy = movie_urls['backtothefuture']\n",
-      "btf_data = make_series_data(btf_trilogy)"
-     ],
-     "language": "python"
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "metadata": {},
      "outputs": [
       {
-       "ename": "TypeError",
-       "evalue": "string indices must be integers, not str",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-20-3a51d652e6b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mlotr_plot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeplot_grosses\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maliens_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mbtf_plot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeplot_grosses\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbtf_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Domestic Grosses for Popular Trilogies'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/schwenk/Metis/Projects/Luther/scrapers/box_mojo.pyc\u001b[0m in \u001b[0;36mmakeplot_grosses\u001b[0;34m(movie_list)\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mgrosses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'domestic_total_gross'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m1000000\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmovie\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmovie_list\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m         \u001b[0mgrossplot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrosses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mgrossplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mTypeError\u001b[0m: string indices must be integers, not str"
-       ]
-      },
-      {
-       "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADXJJREFUeJzt3V+InfWdx/H3ZxMtCOvaEvAipthtg2sLii1N7XYXT1Ho\n1IsKXVhJ/9E/UFlI2btae1Hnpl28K0VwRaz0qrlohc0uQSnbHlpErYEadU0k2a6QxCLVtlKKFwl+\n92JOk+mYnD8zZ87Er+8XDMwzz2+e8/PHzDuPv5NHU1VIknr5q62egCRp/oy7JDVk3CWpIeMuSQ0Z\nd0lqyLhLUkMT457k+0leTvLsmDHfS3IsyeEkN8x3ipKkWU1z5/4QsHShk0luBd5XVbuBrwL3zWlu\nkqR1mhj3qvoF8PsxQz4F/GA09kngiiRXzmd6kqT1mMee+07gxKrjk8BVc7iuJGmd5vWGatYc+980\nkKQttH0O1zgF7Fp1fNXoa38hicGXpHWoqrU30BPN4879APAFgCQ3An+oqpfPN7Cq/Kji7rvv3vI5\nXCwfroVr4VqM/1iviXfuSX4I3ATsSHICuBu4ZBTr+6vqYJJbkxwH/gR8ad2zkSTNxcS4V9XeKcbs\nm890JEnz4BOqW2AwGGz1FC4arsU5rsU5rsXGZSN7OjO9UFKLei1J6iIJtUVvqEqSLjLGXZIaMu6S\n1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJ\nasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLsk\nNWTcJakh4y5JDRl3SWrIuEtSQ8ZdkhqaGPckS0mOJjmW5M7znN+R5JEkTyd5LskXN2WmkqSppaou\nfDLZBrwA3AKcAp4C9lbVkVVjloF3VNVdSXaMxl9ZVWfWXKvGvZYk6c2SUFWZ9fsm3bnvAY5X1YtV\ndRrYD9y2ZsxvgMtHn18OvLo27JKkxdo+4fxO4MSq45PAR9aMeQD4aZKXgL8G/nl+05MkrcekuE+z\nj/JN4OmqGiR5L/CTJNdX1R/XDlxeXj77+WAwYDAYzDBVSepvOBwyHA43fJ1Je+43AstVtTQ6vgt4\no6ruWTXmIPDtqnpsdPzfwJ1VdWjNtdxzl6QZbdae+yFgd5Krk1wK3A4cWDPmKCtvuJLkSuAa4Nez\nTkSSND9jt2Wq6kySfcCjwDbgwao6kuSO0fn7ge8ADyU5zMofFl+vqt9t8rwlSWOM3ZaZ6wu5LSNJ\nM9usbRlJ0luQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh\n4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQ\ncZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNTQx7kmWkhxNcizJnRcY\nM0jyqyTPJRnOfZaSpJmkqi58MtkGvADcApwCngL2VtWRVWOuAB4DPlFVJ5PsqKpXznOtGvdakqQ3\nS0JVZdbvm3Tnvgc4XlUvVtVpYD9w25oxnwF+XFUnAc4XdknSYk2K+07gxKrjk6OvrbYbeFeSnyU5\nlOTz85ygJGl22yecn2Yf5RLgg8DNwGXA40meqKpjG52cJGl9JsX9FLBr1fEuVu7eVzsBvFJVrwOv\nJ/k5cD3wprgvLy+f/XwwGDAYDGafsSQ1NhwOGQ6HG77OpDdUt7PyhurNwEvAL3nzG6p/B9wLfAJ4\nB/AkcHtVPb/mWr6hKkkzWu8bqmPv3KvqTJJ9wKPANuDBqjqS5I7R+fur6miSR4BngDeAB9aGXZK0\nWGPv3Of6Qt65S9LMNuuvQkqS3oKMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7\nJDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zd\nkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMu\nSQ1NjHuSpSRHkxxLcueYcR9OcibJp+c7RUnSrMbGPck24F5gCXg/sDfJtRcYdw/wCJBNmKckaQaT\n7tz3AMer6sWqOg3sB247z7ivAT8Cfjvn+UmS1mFS3HcCJ1Ydnxx97awkO1kJ/n2jL9XcZidJWpdJ\ncZ8m1N8FvlFVxcqWjNsykrTFtk84fwrYtep4Fyt376t9CNifBGAH8Mkkp6vqwNqLLS8vn/18MBgw\nGAxmn7EkNTYcDhkOhxu+TlZuuC9wMtkOvADcDLwE/BLYW1VHLjD+IeA/q+rh85yrca8lSXqzJFTV\nzDsiY+/cq+pMkn3Ao8A24MGqOpLkjtH5+9c1W0nSphp75z7XF/LOXZJmtt47d59QlaSGjLskNWTc\nJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLu\nktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3\nSWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNTRX3JEtJjiY5luTO85z/bJLDSZ5J8liS\n6+Y/VUnStFJV4wck24AXgFuAU8BTwN6qOrJqzEeB56vqtSRLwHJV3bjmOjXptSRJfykJVZVZv2+a\nO/c9wPGqerGqTgP7gdtWD6iqx6vqtdHhk8BVs05EkjQ/08R9J3Bi1fHJ0dcu5CvAwY1MSpK0Mdun\nGDP1XkqSjwNfBj52vvPLy8tnPx8MBgwGg2kvLUlvC8PhkOFwuOHrTLPnfiMre+hLo+O7gDeq6p41\n464DHgaWqur4ea7jnrskzWgz99wPAbuTXJ3kUuB24MCaF383K2H/3PnCLklarInbMlV1Jsk+4FFg\nG/BgVR1Jcsfo/P3At4B3AvclAThdVXs2b9qSpHEmbsvM7YXclpGkmW3mtowk6S3GuEtSQ8Zdkhoy\n7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Z\nd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaM\nuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGpoY9yRLSY4mOZbkzguM+d7o/OEkN8x/mpKkWYyNe5Jt\nwL3AEvB+YG+Sa9eMuRV4X1XtBr4K3LdJc21jOBxu9RQuGq7FOa7FOa7Fxk26c98DHK+qF6vqNLAf\nuG3NmE8BPwCoqieBK5JcOfeZNuIP7jmuxTmuxTmuxcZNivtO4MSq45Ojr00ac9XGpyZJWq9Jca8p\nr5N1fp8kaROk6sIdTnIjsFxVS6Pju4A3quqeVWP+HRhW1f7R8VHgpqp6ec21DL4krUNVrb2Bnmj7\nhPOHgN1JrgZeAm4H9q4ZcwDYB+wf/WHwh7VhX+/kJEnrMzbuVXUmyT7gUWAb8GBVHUlyx+j8/VV1\nMMmtSY4DfwK+tOmzliSNNXZbRpL01jT3J1R96OmcSWuR5LOjNXgmyWNJrtuKeS7CND8Xo3EfTnIm\nyacXOb9FmfL3Y5DkV0meSzJc8BQXZorfjx1JHkny9GgtvrgF01yIJN9P8nKSZ8eMma2bVTW3D1a2\nbo4DVwOXAE8D164ZcytwcPT5R4An5jmHi+VjyrX4KPA3o8+X3s5rsWrcT4H/Av5pq+e9RT8TVwD/\nA1w1Ot6x1fPewrVYBv7tz+sAvAps3+q5b9J6/CNwA/DsBc7P3M1537n70NM5E9eiqh6vqtdGh0/S\n9/mAaX4uAL4G/Aj47SInt0DTrMNngB9X1UmAqnplwXNclGnW4jfA5aPPLwderaozC5zjwlTVL4Df\njxkyczfnHXcfejpnmrVY7SvAwU2d0daZuBZJdrLyy/3n/3xFxzeDpvmZ2A28K8nPkhxK8vmFzW6x\nplmLB4APJHkJOAz864LmdjGauZuT/irkrHzo6Zyp/5mSfBz4MvCxzZvOlppmLb4LfKOqKkl4889I\nB9OswyXAB4GbgcuAx5M8UVXHNnVmizfNWnwTeLqqBkneC/wkyfVV9cdNntvFaqZuzjvup4Bdq453\nsfInzLgxV42+1s00a8HoTdQHgKWqGvevZW9l06zFh1h5VgJW9lc/meR0VR1YzBQXYpp1OAG8UlWv\nA68n+TlwPdAt7tOsxd8D3waoqv9N8n/ANaw8f/N2M3M3570tc/ahpySXsvLQ09pfzgPAF+DsE7Dn\nfeipgYlrkeTdwMPA56rq+BbMcVEmrkVV/W1Vvaeq3sPKvvu/NAs7TPf78R/APyTZluQyVt48e37B\n81yEadbiKHALwGh/+Rrg1wud5cVj5m7O9c69fOjprGnWAvgW8E7gvtEd6+mq2rNVc94sU65Fe1P+\nfhxN8gjwDPAG8EBVtYv7lD8T3wEeSnKYlRvRr1fV77Zs0psoyQ+Bm4AdSU4Ad7OyRbfubvoQkyQ1\n5P9mT5IaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ/8Pqcmx+Q339isAAAAASUVORK5C\nYII=\n",
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "<matplotlib.figure.Figure at 0x10a062ed0>"
-       ],
-       "metadata": {}
+        "[[{'rating': 'R', 'release_date': datetime.date(2012, 6, 8), 'runtime_mins': '124', 'domestic_total_gross': 129280800, 'title': 'Prometheus'}, {'rating': 'R', 'release_date': datetime.date(1986, 7, 18), 'runtime_mins': '137', 'domestic_total_gross': 190520200, 'title': 'Aliens'}, {'rating': 'PG-13', 'release_date': datetime.date(2004, 8, 13), 'runtime_mins': '87', 'domestic_total_gross': 107301500, 'title': 'Alien Vs. Predator'}, {'rating': 'R', 'release_date': datetime.date(1979, 5, 25), 'runtime_mins': '117', 'domestic_total_gross': 261052800, 'title': 'Alien'}, {'rating': 'R', 'release_date': datetime.date(1992, 5, 22), 'runtime_mins': '114', 'domestic_total_gross': 110947100, 'title': 'Alien 3'}, {'rating': 'R', 'release_date': datetime.date(1997, 11, 26), 'runtime_mins': '109', 'domestic_total_gross': 86427900, 'title': 'Alien Resurrection'}, {'rating': 'R', 'release_date': datetime.date(2007, 12, 25), 'runtime_mins': '86', 'domestic_total_gross': 49165300, 'title': 'Aliens Vs. Predator - Requiem'}], [{'rating': 'R', 'release_date': datetime.date(2001, 4, 6), 'runtime_mins': '103', 'domestic_total_gross': 108630500, 'title': 'Along Came a Spider'}, {'rating': 'R', 'release_date': datetime.date(1997, 10, 3), 'runtime_mins': '117', 'domestic_total_gross': 109451300, 'title': 'Kiss the Girls'}, {'rating': 'PG-13', 'release_date': datetime.date(2012, 10, 19), 'runtime_mins': '101', 'domestic_total_gross': 26692400, 'title': 'Alex Cross'}], [{'rating': 'PG', 'release_date': datetime.date(2009, 12, 23), 'runtime_mins': '88', 'domestic_total_gross': 234922500, 'title': 'Alvin and the Chipmunks: The Squeakquel'}, {'rating': 'PG', 'release_date': datetime.date(2007, 12, 14), 'runtime_mins': '92', 'domestic_total_gross': 256892000, 'title': 'Alvin and the Chipmunks'}, {'rating': 'G', 'release_date': datetime.date(2011, 12, 16), 'runtime_mins': '87', 'domestic_total_gross': 140392200, 'title': 'Alvin and the Chipmunks: Chipwrecked'}, {'rating': 'G', 'release_date': datetime.date(1987, 5, 22), 'runtime_mins': '76', 'domestic_total_gross': 14443900, 'title': 'The Chipmunk Adventure'}, {'rating': 'Not Yet Rated', 'release_date': datetime.date(2015, 12, 23), 'runtime_mins': None, 'domestic_total_gross': 0, 'title': 'Alvin and the Chipmunks 4'}], [{'rating': 'PG', 'release_date': datetime.date(1992, 8, 7), 'runtime_mins': '85', 'domestic_total_gross': 58000600, 'title': '3 Ninjas'}, {'rating': 'PG', 'release_date': datetime.date(1994, 5, 6), 'runtime_mins': '94', 'domestic_total_gross': 23428300, 'title': '3 Ninjas Kick Back'}, {'rating': 'PG-13', 'release_date': datetime.date(1995, 3, 10), 'runtime_mins': '87', 'domestic_total_gross': 788900, 'title': '3 Ninjas Knuckle Up'}, {'rating': 'PG', 'release_date': datetime.date(1998, 4, 10), 'runtime_mins': '93', 'domestic_total_gross': 665100, 'title': '3 Ninjas: High Noon at Mega Mountain'}]]\n"
+       ]
       }
      ],
      "input": [
-      "%matplotlib inline\n",
-      "s1_label = 'Aliens'\n",
-      "s2_label = 'Back to the Future'\n",
+      "complete_data_list= []\n",
       "\n",
-      "fig, ax = plt.subplots()\n",
-      "lotr_plot = makeplot_grosses(aliens_data)\n",
-      "btf_plot = makeplot_grosses(btf_data)\n",
-      "plt.title('Domestic Grosses for Popular Trilogies', fontsize=17);\n",
-      "# plt.xlabel(\"Films\", fontsize=15, labelpad=5);\n",
-      "plt.axis([0.8,3.2,0,600])\n",
-      "plt.xticks(rotation=60)\n",
-      "plt.tick_params(axis='x', which='major', labelsize=15)\n",
-      "plt.ylabel(\"Inflation adjusted Millions of $\", fontsize=15, labelpad=15);\n",
-      "plt.setp(ax, xticks=range(len(aliens_data)), xticklabels=['1st Film', '2nd Film', '3rd Film']);\n",
-      "plt.setp(btf_plot, color='c', alpha=0.7, linewidth=3.0)\n",
-      "plt.setp(lotr_plot, color='m',alpha=0.7, linewidth=3.0)\n",
-      "plt.legend([s1_label, s2_label],loc='upper right')"
+      "\n",
+      "for franchise, urls in franchise_urls.iteritems():\n",
+      "\tfranchise_data = make_series_data(urls)\n",
+      "\tcomplete_data_list.append(franchise_data)\n",
+      "\n",
+      "# print complete_data_list"
+     ],
+     "language": "python",
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "%matplotlib inline\n",
+      "# s1_label = 'Aliens'\n",
+      "# s2_label = 'Back to the Future'\n",
+      "# \n",
+      "# fig, ax = plt.subplots()\n",
+      "# lotr_plot = makeplot_grosses(aliens_data)\n",
+      "# btf_plot = makeplot_grosses(btf_data)\n",
+      "# plt.title('Domestic Grosses for Popular Trilogies', fontsize=17);\n",
+      "# # plt.xlabel(\"Films\", fontsize=15, labelpad=5);\n",
+      "# plt.axis([0.8,3.2,0,600])\n",
+      "# plt.xticks(rotation=60)\n",
+      "# plt.tick_params(axis='x', which='major', labelsize=15)\n",
+      "# plt.ylabel(\"Inflation adjusted Millions of $\", fontsize=15, labelpad=15);\n",
+      "# plt.setp(ax, xticks=range(len(aliens_data)), xticklabels=['1st Film', '2nd Film', '3rd Film']);\n",
+      "# plt.setp(btf_plot, color='c', alpha=0.7, linewidth=3.0)\n",
+      "# plt.setp(lotr_plot, color='m',alpha=0.7, linewidth=3.0)\n",
+      "# plt.legend([s1_label, s2_label],loc='upper right')"
+     ],
+     "language": "python",
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "df = pd.DataFrame(movie_data_dict)"
      ],
      "language": "python"
     },
