Data for 725 movies and 151 franchises are in a pandas dataframe

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -27,10 +27,10 @@
      "outputs": [],
      "input": [
       "franchiseslist = build_franchise_chart_urls()\n",
-      "franchise_urls = build_movie_url_list(franchiseslist[:1])\n"
+      "franchise_urls = build_movie_url_list(franchiseslist)"
      ],
      "language": "python",
-     "prompt_number": 11
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -40,22 +40,52 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[{'rating': 'R', 'release_date': datetime.date(2012, 6, 8), 'runtime_mins': '124', 'domestic_total_gross': 129280800, 'title': 'Prometheus'}, {'rating': 'R', 'release_date': datetime.date(1986, 7, 18), 'runtime_mins': '137', 'domestic_total_gross': 190520200, 'title': 'Aliens'}, {'rating': 'PG-13', 'release_date': datetime.date(2004, 8, 13), 'runtime_mins': '87', 'domestic_total_gross': 107301500, 'title': 'Alien Vs. Predator'}, {'rating': 'R', 'release_date': datetime.date(1979, 5, 25), 'runtime_mins': '117', 'domestic_total_gross': 261052800, 'title': 'Alien'}, {'rating': 'R', 'release_date': datetime.date(1992, 5, 22), 'runtime_mins': '114', 'domestic_total_gross': 110947100, 'title': 'Alien 3'}, {'rating': 'R', 'release_date': datetime.date(1997, 11, 26), 'runtime_mins': '109', 'domestic_total_gross': 86427900, 'title': 'Alien Resurrection'}, {'rating': 'R', 'release_date': datetime.date(2007, 12, 25), 'runtime_mins': '86', 'domestic_total_gross': 49165300, 'title': 'Aliens Vs. Predator - Requiem'}], [{'rating': 'R', 'release_date': datetime.date(2001, 4, 6), 'runtime_mins': '103', 'domestic_total_gross': 108630500, 'title': 'Along Came a Spider'}, {'rating': 'R', 'release_date': datetime.date(1997, 10, 3), 'runtime_mins': '117', 'domestic_total_gross': 109451300, 'title': 'Kiss the Girls'}, {'rating': 'PG-13', 'release_date': datetime.date(2012, 10, 19), 'runtime_mins': '101', 'domestic_total_gross': 26692400, 'title': 'Alex Cross'}], [{'rating': 'PG', 'release_date': datetime.date(2009, 12, 23), 'runtime_mins': '88', 'domestic_total_gross': 234922500, 'title': 'Alvin and the Chipmunks: The Squeakquel'}, {'rating': 'PG', 'release_date': datetime.date(2007, 12, 14), 'runtime_mins': '92', 'domestic_total_gross': 256892000, 'title': 'Alvin and the Chipmunks'}, {'rating': 'G', 'release_date': datetime.date(2011, 12, 16), 'runtime_mins': '87', 'domestic_total_gross': 140392200, 'title': 'Alvin and the Chipmunks: Chipwrecked'}, {'rating': 'G', 'release_date': datetime.date(1987, 5, 22), 'runtime_mins': '76', 'domestic_total_gross': 14443900, 'title': 'The Chipmunk Adventure'}, {'rating': 'Not Yet Rated', 'release_date': datetime.date(2015, 12, 23), 'runtime_mins': None, 'domestic_total_gross': 0, 'title': 'Alvin and the Chipmunks 4'}], [{'rating': 'PG', 'release_date': datetime.date(1992, 8, 7), 'runtime_mins': '85', 'domestic_total_gross': 58000600, 'title': '3 Ninjas'}, {'rating': 'PG', 'release_date': datetime.date(1994, 5, 6), 'runtime_mins': '94', 'domestic_total_gross': 23428300, 'title': '3 Ninjas Kick Back'}, {'rating': 'PG-13', 'release_date': datetime.date(1995, 3, 10), 'runtime_mins': '87', 'domestic_total_gross': 788900, 'title': '3 Ninjas Knuckle Up'}, {'rating': 'PG', 'release_date': datetime.date(1998, 4, 10), 'runtime_mins': '93', 'domestic_total_gross': 665100, 'title': '3 Ninjas: High Noon at Mega Mountain'}]]\n"
+        "date error\ndate error"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\ndate error"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\ndate error"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\ndate error"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
      "input": [
-      "complete_data_list= []\n",
+      "# complete_data_list= []\n",
+      "# \n",
+      "# \n",
+      "# for franchise, urls in franchise_urls.iteritems():\n",
+      "# \tfranchise_data = make_series_data(urls)\n",
+      "# \tfor movie in franchise_data:\n",
+      "# \t\tmovie[\"franchise\"] = franchise\n",
+      "# \t\tcomplete_data_list.append(movie)\n",
       "\n",
-      "\n",
-      "for franchise, urls in franchise_urls.iteritems():\n",
-      "\tfranchise_data = make_series_data(urls)\n",
-      "\tcomplete_data_list.append(franchise_data)\n",
-      "\n",
-      "# print complete_data_list"
+      "complete_data_list = make_complete_movie_dataset(franchise_urls)"
      ],
      "language": "python",
-     "prompt_number": 10
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -84,22 +114,33 @@
      "prompt_number": 5
     },
     {
-     "cell_type": "code",
+     "cell_type": "heading",
      "metadata": {},
-     "outputs": [],
-     "input": [
-      "df = pd.DataFrame(movie_data_dict)"
-     ],
-     "language": "python"
+     "level": 3,
+     "source": [
+      "At this point, I have 725 movies belonging to 151 franchises"
+     ]
     },
     {
      "cell_type": "code",
      "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "     domestic_total_gross franchise         rating release_date runtime_mins  \\\n721                     0     httyd  Not Yet Rated   2017-06-09         None   \n722             187184000    scream              R   1996-12-20          110   \n723             181776000    scream              R   1997-12-12          120   \n724             137270600    scream              R   2000-02-04          117   \n725              39317800    scream              R   2011-04-15          103   \n\n                          title  \n721  How to Train Your Dragon 3  \n722                      Scream  \n723                    Scream 2  \n724                    Scream 3  \n725                    Scream 4  \n"
+       ]
+      }
      ],
-     "language": "python"
+     "input": [
+      "import pandas as pd\n",
+      "df = pd.DataFrame(complete_data_list)\n",
+      "\n",
+      "print df.tail();"
+     ],
+     "language": "python",
+     "prompt_number": 5
     }
    ]
   }
