Writing data to pickle file

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -92,6 +92,15 @@
      "metadata": {},
      "outputs": [],
      "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "metadata": {},
+     "outputs": [],
+     "input": [
       "%matplotlib inline\n",
       "# s1_label = 'Aliens'\n",
       "# s2_label = 'Back to the Future'\n",
