Git cleanup, gitignore additions

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -92,9 +92,13 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
+      "import pickle\n",
+      "\n",
+      "with open('complete_data.pkl', 'w') as picklefile:\n",
+      "    pickle.dump(complete_data_list, picklefile)"
      ],
-     "language": "python"
+     "language": "python",
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
