Refactored property scraping for easier addition of new movie properties

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -26,8 +26,8 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "franchiseslist = build_franchise_chart_urls()\n",
-      "franchise_urls = build_movie_url_list(franchiseslist)"
+      "# franchiseslist = build_franchise_chart_urls()\n",
+      "# franchise_urls = build_movie_url_list(franchiseslist)"
      ],
      "language": "python",
      "prompt_number": 3
@@ -93,12 +93,23 @@
      "outputs": [],
      "input": [
       "import pickle\n",
-      "\n",
-      "with open('complete_data.pkl', 'w') as picklefile:\n",
-      "    pickle.dump(complete_data_list, picklefile)"
+      "# \n",
+      "# with open('complete_data.pkl', 'w') as picklefile:\n",
+      "#     pickle.dump(complete_data_list, picklefile)"
      ],
      "language": "python",
-     "prompt_number": 8
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "with open(\"complete_data.pkl\", 'r') as picklefile: \n",
+      "    complete_data_for_pandas = pickle.load(picklefile)"
+     ],
+     "language": "python",
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -148,12 +159,30 @@
      ],
      "input": [
       "import pandas as pd\n",
-      "df = pd.DataFrame(complete_data_list)\n",
+      "df = pd.DataFrame(complete_data_for_pandas)\n",
       "\n",
       "print df.tail();"
      ],
      "language": "python",
-     "prompt_number": 5
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   domestic_total_gross    franchise rating release_date runtime_mins  \\\n0             108630500    alexcross      R   2001-04-06          103   \n1             109451300    alexcross      R   1997-10-03          117   \n2              26692400    alexcross  PG-13   2012-10-19          101   \n3             101504700  mightyducks     PG   1992-10-02          104   \n4              90566100  mightyducks     PG   1994-03-25          107   \n\n                  title  \n0   Along Came a Spider  \n1        Kiss the Girls  \n2            Alex Cross  \n3      The Mighty Ducks  \n4  D2: The Mighty Ducks  \n"
+       ]
+      }
+     ],
+     "input": [
+      "print df.head()"
+     ],
+     "language": "python",
+     "prompt_number": 7
     }
    ]
   }
