Budget data added

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -1,11 +1,15 @@
 {
+ "metadata": {
+  "signature": "sha256:c61916ee92c5de03f7c339dec4b1d271aad9a8166c7ce611203e19d88eea7ee3"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
       "from collections import defaultdict\n",
       "import urllib2\n",
@@ -19,59 +23,25 @@
       "from box_mojo_franchise_list import *"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 2
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
-      "# franchiseslist = build_franchise_chart_urls()\n",
-      "# franchise_urls = build_movie_url_list(franchiseslist)"
+      "franchiseslist = build_franchise_chart_urls()\n",
+      "franchise_urls = build_movie_url_list(franchiseslist[0:20])"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "date error\ndate error"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\ndate error"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\ndate error"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\ndate error"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      }
-     ],
+     "collapsed": false,
      "input": [
       "# complete_data_list= []\n",
       "# \n",
@@ -85,12 +55,13 @@
       "complete_data_list = make_complete_movie_dataset(franchise_urls)"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 4
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
       "import pickle\n",
       "# \n",
@@ -98,23 +69,25 @@
       "#     pickle.dump(complete_data_list, picklefile)"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
       "with open(\"complete_data.pkl\", 'r') as picklefile: \n",
       "    complete_data_for_pandas = pickle.load(picklefile)"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 4
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
       "%matplotlib inline\n",
       "# s1_label = 'Aliens'\n",
@@ -135,28 +108,21 @@
       "# plt.legend([s1_label, s2_label],loc='upper right')"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 5
     },
     {
      "cell_type": "heading",
-     "metadata": {},
      "level": 3,
+     "metadata": {},
      "source": [
       "At this point, I have 725 movies belonging to 151 franchises"
      ]
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "     domestic_total_gross franchise         rating release_date runtime_mins  \\\n721                     0     httyd  Not Yet Rated   2017-06-09         None   \n722             187184000    scream              R   1996-12-20          110   \n723             181776000    scream              R   1997-12-12          120   \n724             137270600    scream              R   2000-02-04          117   \n725              39317800    scream              R   2011-04-15          103   \n\n                          title  \n721  How to Train Your Dragon 3  \n722                      Scream  \n723                    Scream 2  \n724                    Scream 3  \n725                    Scream 4  \n"
-       ]
-      }
-     ],
+     "collapsed": false,
      "input": [
       "import pandas as pd\n",
       "df = pd.DataFrame(complete_data_for_pandas)\n",
@@ -164,33 +130,63 @@
       "print df.tail();"
      ],
      "language": "python",
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "   domestic_total_gross    franchise rating release_date runtime_mins  \\\n0             108630500    alexcross      R   2001-04-06          103   \n1             109451300    alexcross      R   1997-10-03          117   \n2              26692400    alexcross  PG-13   2012-10-19          101   \n3             101504700  mightyducks     PG   1992-10-02          104   \n4              90566100  mightyducks     PG   1994-03-25          107   \n\n                  title  \n0   Along Came a Spider  \n1        Kiss the Girls  \n2            Alex Cross  \n3      The Mighty Ducks  \n4  D2: The Mighty Ducks  \n"
+        "     domestic_total_gross franchise         rating release_date runtime_mins  \\\n",
+        "721                     0     httyd  Not Yet Rated   2017-06-09         None   \n",
+        "722             187184000    scream              R   1996-12-20          110   \n",
+        "723             181776000    scream              R   1997-12-12          120   \n",
+        "724             137270600    scream              R   2000-02-04          117   \n",
+        "725              39317800    scream              R   2011-04-15          103   \n",
+        "\n",
+        "                          title  \n",
+        "721  How to Train Your Dragon 3  \n",
+        "722                      Scream  \n",
+        "723                    Scream 2  \n",
+        "724                    Scream 3  \n",
+        "725                    Scream 4  \n"
        ]
       }
      ],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [
       "print df.head()"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   domestic_total_gross    franchise rating release_date runtime_mins  \\\n",
+        "0             108630500    alexcross      R   2001-04-06          103   \n",
+        "1             109451300    alexcross      R   1997-10-03          117   \n",
+        "2              26692400    alexcross  PG-13   2012-10-19          101   \n",
+        "3             101504700  mightyducks     PG   1992-10-02          104   \n",
+        "4              90566100  mightyducks     PG   1994-03-25          107   \n",
+        "\n",
+        "                  title  \n",
+        "0   Along Came a Spider  \n",
+        "1        Kiss the Girls  \n",
+        "2            Alex Cross  \n",
+        "3      The Mighty Ducks  \n",
+        "4  D2: The Mighty Ducks  \n"
+       ]
+      }
+     ],
      "prompt_number": 7
     }
-   ]
+   ],
+   "metadata": {}
   }
- ],
- "cells": [],
- "metadata": {
-  "signature": "sha256:34e8e192338c65a142947965e22639f919fc8eb5c9b1a11be5b6e965c6c8a67c"
- },
- "nbformat": 3,
- "nbformat_minor": 0
+ ]
 }
