--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:c61916ee92c5de03f7c339dec4b1d271aad9a8166c7ce611203e19d88eea7ee3"
+  "signature": "sha256:5fcc10683fb4cebd1577eb0f3ba6d94ce1e027b7f9ffb5c807e764651adf1ea5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -11,6 +11,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%load_ext autoreload\n",
+      "%autoreload 2\n",
+      "\n",
       "from collections import defaultdict\n",
       "import urllib2\n",
       "from bs4 import BeautifulSoup\n",
@@ -24,20 +27,29 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "franchiseslist = build_franchise_chart_urls()\n",
-      "franchise_urls = build_movie_url_list(franchiseslist[0:20])"
+      "franchise_urls = build_movie_url_list(franchiseslist[0:3])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -57,7 +69,26 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print complete_data_list[5]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'rating': 'R', 'runtime_mins': None, 'oscars': None, 'title': 'Alien Resurrection', 'release_date': datetime.date(1997, 11, 26), 'budget': 75000000.0, 'distrib': None, 'domestic_total_gross': 86427900, 'genre': 'Sci-Fi Horror', 'franchise': 'alien'}\n"
+       ]
+      }
+     ],
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -71,7 +102,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
