Added director data field, fixed bug in distributor field

--- a/scrapers/franchise_scraping.ipynb
+++ b/scrapers/franchise_scraping.ipynb
@@ -1,23 +1,19 @@
 {
+ "metadata": {
+  "signature": "sha256:fe1decb3866438e1c465d5b387cbabc1aaaf09e315effa31a29179eaa83c6e37"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-       ]
-      }
-     ],
+     "collapsed": false,
      "input": [
       "%load_ext autoreload\n",
       "%autoreload 2\n",
-      "\n",
+      "%matplotlib inline \n",
       "from collections import defaultdict\n",
       "import urllib2\n",
       "from bs4 import BeautifulSoup\n",
@@ -30,83 +26,84 @@
       "from box_mojo_franchise_list import *"
      ],
      "language": "python",
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "franchiseslist = build_franchise_chart_urls()\n",
-      "franchise_urls = build_movie_url_list(franchiseslist)"
-     ],
-     "language": "python",
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "complete_data_list = make_complete_movie_dataset(franchise_urls)"
-     ],
-     "language": "python",
-     "prompt_number": 12
-    },
-    {
-     "cell_type": "code",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'rating': 'PG', 'oscars': None, 'title': 'D3: The Mighty Ducks', 'release_date': datetime.date(1996, 10, 4), 'budget': None, 'distrib': None, 'domestic_total_gross': 43105700, 'genre': 'Family Comedy', 'runtime': 104, 'franchise': 'mightyducks'}\n"
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
        ]
       }
      ],
-     "input": [
-      "print complete_data_list[5]"
-     ],
-     "language": "python",
-     "prompt_number": 13
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "metadata": {},
-     "outputs": [],
+     "collapsed": false,
      "input": [
-      "%matplotlib inline\n",
-      "# s1_label = 'Aliens'\n",
-      "# s2_label = 'Back to the Future'\n",
-      "# \n",
-      "# fig, ax = plt.subplots()\n",
-      "# lotr_plot = makeplot_grosses(aliens_data)\n",
-      "# btf_plot = makeplot_grosses(btf_data)\n",
-      "# plt.title('Domestic Grosses for Popular Trilogies', fontsize=17);\n",
-      "# # plt.xlabel(\"Films\", fontsize=15, labelpad=5);\n",
-      "# plt.axis([0.8,3.2,0,600])\n",
-      "# plt.xticks(rotation=60)\n",
-      "# plt.tick_params(axis='x', which='major', labelsize=15)\n",
-      "# plt.ylabel(\"Inflation adjusted Millions of $\", fontsize=15, labelpad=15);\n",
-      "# plt.setp(ax, xticks=range(len(aliens_data)), xticklabels=['1st Film', '2nd Film', '3rd Film']);\n",
-      "# plt.setp(btf_plot, color='c', alpha=0.7, linewidth=3.0)\n",
-      "# plt.setp(lotr_plot, color='m',alpha=0.7, linewidth=3.0)\n",
-      "# plt.legend([s1_label, s2_label],loc='upper right')"
+      "franchiseslist = build_franchise_chart_urls()\n",
+      "franchise_urls = build_movie_url_list(franchiseslist)"
      ],
      "language": "python",
-     "prompt_number": 5
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "complete_data_list = make_complete_movie_dataset(franchise_urls)\n",
+      "\n",
+      "import pickle\n",
+      "\n",
+      "with open(\"complete_data.pkl\", 'w') as picklefile:\n",
+      "    pickle.dump(complete_data_list, picklefile)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print complete_data_list[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'rating': 'R', 'oscars': 0, 'title': 'Along Came a Spider', 'release_date': numpy.datetime64('2001-04-06'), 'budget': 60000000.0, 'director': 'Lee Tamahori', 'distrib': 'Paramount', 'domestic_total_gross': 108630500, 'genre': 'Thriller', 'runtime': 103, 'franchise': 'alexcross'}\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
-     "metadata": {},
      "level": 3,
+     "metadata": {},
      "source": [
       "At this point, I have 725 movies belonging to 151 franchises"
      ]
     },
     {
      "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pandas as pd\n",
+      "df = pd.DataFrame(complete_data_for_pandas)\n",
+      "\n",
+      "print df.tail();"
+     ],
+     "language": "python",
      "metadata": {},
      "outputs": [
       {
@@ -129,22 +126,10 @@
        ]
       }
      ],
-     "input": [
-      "import pandas as pd\n",
-      "df = pd.DataFrame(complete_data_for_pandas)\n",
-      "\n",
-      "print df.tail();"
-     ],
-     "language": "python",
      "prompt_number": 6
     }
-   ]
+   ],
+   "metadata": {}
   }
- ],
- "cells": [],
- "metadata": {
-  "signature": "sha256:5fcc10683fb4cebd1577eb0f3ba6d94ce1e027b7f9ffb5c807e764651adf1ea5"
- },
- "nbformat": 3,
- "nbformat_minor": 0
+ ]
 }
