--- a/challenges/eda_challenges.ipynb
+++ b/challenges/eda_challenges.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:0e116ece00a8a7d84e43be07b1a7a11769ead247117b03410927e3e8c1c45a54"
+  "signature": "sha256:596f8142fbbb6198f54ef081ff4ab28bffb54723a691b5ca8b793fa6b5325890"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -292,12 +292,26 @@
      "prompt_number": 190
     },
     {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Challenge 5"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# directors_df = pd.DataFrame(dir)\n",
+      "df_cleaned_dir = df_complete[pd.notnull(df_complete['director'])]\n",
+      "grouped_dir = df_cleaned_dir.groupby('director')\n",
+      "summed_dir = grouped_dir.sum()\n",
+      "movieperdir = grouped_dir.size()\n",
       "\n",
-      "print df_complete.head()"
+      "gross_per_movie = summed_dir.div(movieperdir,axis=0)\n",
+      "\n",
+      "print gross_per_movie.sort(columns='domestic_total_gross', ascending=False)['domestic_total_gross'][:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -306,30 +320,22 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "     budget      director           distrib  domestic_total_gross  \\\n",
-        "0  60000000  Lee Tamahori         Paramount             108630500   \n",
-        "1  27000000          None         Paramount             109451300   \n",
-        "2  35000000     Rob Cohen  Lionsgate/Summit              26692400   \n",
-        "3  10000000          None       Buena Vista             101504700   \n",
-        "4       NaN          None       Buena Vista              90566100   \n",
-        "\n",
-        "     franchise           genre  oscars rating release_date  runtime  \\\n",
-        "0    alexcross        Thriller       0      R   2001-04-06      103   \n",
-        "1    alexcross        Thriller       0      R   1997-10-03      117   \n",
-        "2    alexcross  Crime Thriller       0  PG-13   2012-10-19      101   \n",
-        "3  mightyducks   Family Comedy       0     PG   1992-10-02      104   \n",
-        "4  mightyducks   Family Comedy       0     PG   1994-03-25      107   \n",
-        "\n",
-        "                  title  \n",
-        "0   Along Came a Spider  \n",
-        "1        Kiss the Girls  \n",
-        "2            Alex Cross  \n",
-        "3      The Mighty Ducks  \n",
-        "4  D2: The Mighty Ducks  \n"
+        "director\n",
+        "William Friedkin                           8.566310e+08\n",
+        "George Lucas                               7.032106e+08\n",
+        "Joss Whedon                                6.371762e+08\n",
+        "Andrew AdamsonKelly AsburyConrad Vernon    5.897227e+08\n",
+        "Steven Spielberg                           5.792778e+08\n",
+        "Martin Brest                               5.573451e+08\n",
+        "Christopher Nolan                          4.534715e+08\n",
+        "Gore Verbinski                             4.433616e+08\n",
+        "Chris Columbus                             4.366062e+08\n",
+        "Lee Unkrich                                4.332755e+08\n",
+        "Name: domestic_total_gross, dtype: float64\n"
        ]
       }
      ],
-     "prompt_number": 203
+     "prompt_number": 228
     },
     {
      "cell_type": "code",
