Commiting again for safety

--- a/challenges/eda_challenges.ipynb
+++ b/challenges/eda_challenges.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:f1b5c40fc83e1c1a0106250c080e3cce74c92530e176a33dc38453270bea8d36"
+  "signature": "sha256:eedd034f2ed8770d29f9878614a60717879681b822a05060eed815d7ff9ad202"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -689,7 +689,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "Challenge 4linear_model.LinearRegression()"
+      "Challenge 4"
      ]
     },
     {
