Metacritic scores now in data frame

--- a/project/franchise_scraping.ipynb
+++ b/project/franchise_scraping.ipynb
@@ -1,15 +1,20 @@
 {
- "metadata": {
-  "signature": "sha256:fe1decb3866438e1c465d5b387cbabc1aaaf09e315effa31a29179eaa83c6e37"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
+     ],
      "input": [
       "%load_ext autoreload\n",
       "%autoreload 2\n",
@@ -26,34 +31,23 @@
       "from box_mojo_franchise_list import *"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
      "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "franchiseslist = build_franchise_chart_urls()\n",
       "franchise_urls = build_movie_url_list(franchiseslist)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 7
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "complete_data_list = make_complete_movie_dataset(franchise_urls)\n",
       "\n",
@@ -63,17 +57,10 @@
       "    pickle.dump(complete_data_list, picklefile)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 10
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print complete_data_list[0]"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
@@ -84,26 +71,22 @@
        ]
       }
      ],
+     "input": [
+      "print complete_data_list[0]"
+     ],
+     "language": "python",
      "prompt_number": 11
     },
     {
      "cell_type": "heading",
-     "level": 3,
      "metadata": {},
+     "level": 3,
      "source": [
       "At this point, I have 725 movies belonging to 151 franchises"
      ]
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import pandas as pd\n",
-      "df = pd.DataFrame(complete_data_for_pandas)\n",
-      "\n",
-      "print df.tail();"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
@@ -126,10 +109,22 @@
        ]
       }
      ],
+     "input": [
+      "import pandas as pd\n",
+      "df = pd.DataFrame(complete_data_for_pandas)\n",
+      "\n",
+      "print df.tail();"
+     ],
+     "language": "python",
      "prompt_number": 6
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "signature": "sha256:fe1decb3866438e1c465d5b387cbabc1aaaf09e315effa31a29179eaa83c6e37"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
